# pirulla-bot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.old  README.md  channel.py  config.py  data_generator.py  docker-entrypoint.sh  fly.toml  main.py  pirulla_bot.py  pyproject.toml  requirements.txt  shared.py  youtube_api.py
.github/workflows/: auto-deploy-ec2.yml
app/: config.py  main.py  pirulla_bot.py  youtube_api.py
data/: .gitignore
pirulla-bot/: config.py  main.py  youtube_api.py
