[project]
name = "pirulla-bot"
version = "2.0.0"
description = "This project tracks the average length of videos on the 'Pirulla' YouTube channel. The script collects data from the channel, calculates the average video duration, posts updates on Twitter with relevant statistics and a plot showing the variation in average duration over time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.154.0",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.2",
    "standard-imghdr>=3.13.0",
    "tweepy>=4.14.0",
]
